--- a/1.1.md
+++ b/1.1.md
@@ -1,1 +1,15 @@
+```python
+import nltk
+nltk.download()
+from nltk.book import *
 
+#concordance: shows every occurence of a given word
+text1.concordance("monstrous")
+
+#similar: the other words that shows in a similar range of contexts
+text1.similar("monstrous")
+
+#common_contexts: examine the contexts that are shared by two or more words in documents
+text1.common_contexts(["monstrous","very"])
+
+```
