--- a/1.1.md
+++ b/1.1.md
@@ -32,9 +32,9 @@ count(): how often a word occurs in a text
 ```python
 text3.count('smote')
 ```
-lexical_diversity: len(text) / len(set(text)), dedicate how many times that each word has been used in average
-percentage: 100 * text.count('word') / len(text), dedicate the percentage of a word within a text
-FreqDist(): frequency distribution for each vocabulary item in the text
+**lexical_diversity**: len(text) / len(set(text)), dedicate how many times that each word has been used in average
+**percentage**: 100 * text.count('word') / len(text), dedicate the percentage of a word within a text
+**FreqDist()**: frequency distribution for each vocabulary item in the text
 ```python
 fdist1 = FreqDist(text1)
 print(fdist1)
