--- a/1.1.md
+++ b/1.1.md
@@ -48,5 +48,44 @@ fdist1.hapaxes()                                            #List the words that
 
 sorted(w for w in set(text5) if len(w) > 7 and fdist5[w] > 7) #find the long words that occurs more than one times in the text
 ```
+perhaps these will be more characteristic and informative. However, after we use the following code for text4
+
+```python
+V = set(text4)
+long_words = [w for w in V if len(w) > 15]
+sorted(long_words)
+```
+
+The result shows that there are a lot of long meaningless words like: yuuuuuuuuuuuummmmmmmmmmmm.  Well, these very long words are often hapaxes (i.e., unique) and perhaps it would be better to find frequently occurring long words.This seems promising since it eliminates frequent short words (e.g., the) and infrequent long words (e.g. antiphilosophists). Here are all words from the chat corpus that are longer than seven characters, that occur more than seven times:
+
+```python
+fdist5 = FreqDist(text5)
+sorted(w for w in set(text5) if len(w) > 7 and fdist5[w] > 7)
+>>['#14-19teens', '#talkcity_adults', '((((((((((', '........', 'Question',
+'actually', 'anything', 'computer', 'cute.-ass', 'everyone', 'football',
+'innocent', 'listening', 'remember', 'seriously', 'something', 'together',
+'tomorrow', 'watching']
+
+```
+The results only shows the long words that appeared more than 1 times, but how about we want to know the exactly number and the cummulative frequncy diagram of these relatively-informative words?
+
+```python
+def remove(fdist):                    #build a remove function that remove the long words that appeared  less than seventh
+...     if len(fdist) > 0:
+...             for i,j in fdist.items():
+...                     if j < 7:
+...                             fdist.pop(i)
+...                             return remove(fdist)
+...     else:
+...             return fdist
+fdist5 = FreqDist(for w in text5 if len(w) > 7)             #create a FreqDist that only contains the word lenth more than 7
+remove(fdist5)
+fdist5.plot(cumulative=True)
+```
+Diagram:
+![alt text][logo]
+[logo]:
+
+
 ## Collocation:
 A collocation is a sequence of words that occur together usually often. E.g. (red wine)
