--- a/1.1.md
+++ b/1.1.md
@@ -84,7 +84,7 @@ fdist5.plot(cumulative=True)
 ```
 Diagram:
 ![alt text][logo]
-[logo]:../master/
+[logo]: https://github.com/pcheng2/NLTK-Notes/blob/master/Figure_1.png "Cummulative Frequency plot"
 
 
 ## Collocation:
