--- a/1.1.md
+++ b/1.1.md
@@ -39,6 +39,7 @@ text3.count('smote')
 **FreqDist()**: frequency distribution for each vocabulary item in the text
 
 ```python
+len(text1) / len(set(text1))                                #lexical diversity
 fdist1 = FreqDist(text1)
 print(fdist1)
 fdist1.most_common(50)                                      #List the 5o most frequent words of the text
@@ -91,3 +92,9 @@ Diagram:
 
 ## Collocation:
 A collocation is a sequence of words that occur together usually often. E.g. (red wine)
+
+**Bigrams:** pair of words
+
+```python 
+text4.collocation()     #find the frequent bigrams
+```
